# SistemaArion

./: .gitignore  README.md  app.py  data_generator.py  database.py  model.py  pyproject.toml  requirements.txt
