[tool.poetry]
name = "arion"
version = "0.2.0"
description = "Sistema de detecção de fraudes financeiras com IA - Versão Parruda para Hackathon"
authors = ["Seu Nome <seu.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"  # Restrito para compatibilidade com SciPy e libs ML (evita 3.12+)
streamlit = "^1.28.0"
flask = "^2.3.0"
scikit-learn = "1.2.2"  # Estável e compatível
xgboost = "1.7.6"
imbalanced-learn = "0.10.1"
pandas = "^2.0.0"
numpy = "^1.24.0"
scipy = "1.10.1"  # Pinned, agora compatível com a restrição Python
plotly = "^5.15.0"
joblib = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"